--- a/common/src/main/resources/assets/arikeys/lang/en_us.json
+++ b/common/src/main/resources/assets/arikeys/lang/en_us.json
@@ -1,11 +1,11 @@
 {
-  "arikeys.controls.title": "AriKeys Controls",
-  "arikeys.aributton": "AriKeys Controls",
+  "mythickeys.controls.title": "MythicKeys Controls",
+  "mythickeys.aributton": "MythicKeys Controls",
 
-  "arikeys.modifier.left_shift": "LShift",
-  "arikeys.modifier.right_shift": "RShift",
-  "arikeys.modifier.left_alt": "LAlt",
-  "arikeys.modifier.right_alt": "RAlt",
-  "arikeys.modifier.left_ctrl": "LCtrl",
-  "arikeys.modifier.right_ctrl": "RCtrl"
+  "mythickeys.modifier.left_shift": "LShift",
+  "mythickeys.modifier.right_shift": "RShift",
+  "mythickeys.modifier.left_alt": "LAlt",
+  "mythickeys.modifier.right_alt": "RAlt",
+  "mythickeys.modifier.left_ctrl": "LCtrl",
+  "mythickeys.modifier.right_ctrl": "RCtrl"
 }
