--- a/common/src/main/resources/assets/arikeys/lang/en_us.json
+++ b/common/src/main/resources/assets/arikeys/lang/en_us.json
@@ -1,6 +1,6 @@
 {
   "mythickeys.controls.title": "MythicKeys Controls",
-  "mythickeys.aributton": "MythicKeys Controls",
+  "mythickeys.mythicbutton": "MythicKeys Controls",
 
   "mythickeys.modifier.left_shift": "LShift",
   "mythickeys.modifier.right_shift": "RShift",
